runtime/bridge/webgpu-addon/doe_napi_internal.h

typedef void* WGPUBuffer;
typedef void* WGPUTexture;
typedef uint32_t WGPUBool;
typedef struct { void* next; uint32_t sType; } WGPUChainedStruct;
typedef struct { uint32_t width; uint32_t height; uint32_t depthOrArrayLayers; } WGPUExtent3D;
typedef struct { uint32_t x; uint32_t y; uint32_t z; } WGPUOrigin3D;
typedef struct { uint64_t offset; uint32_t bytesPerRow; uint32_t rowsPerImage; } WGPUTexelCopyBufferLayout;
typedef struct { WGPUTexelCopyBufferLayout layout; WGPUBuffer buffer; } WGPUTexelCopyBufferInfo;
typedef struct { WGPUTexture texture; uint32_t mipLevel; WGPUOrigin3D origin; uint32_t aspect; } WGPUTexelCopyTextureInfo;